force-app/main/default/objects/Object_BPD_Test__c/Object_BPD_Test__c.object-meta.xml
<CustomObject>
    <label>Object BPD Test</label>
    <nameField>
        <label>Nombre BPD</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object BPD Test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>