force-app/main/default/objects/Object_BPD_Test__c/fields/Aprobaciones__c.field-meta.xml
<CustomField>
    <fullName>Aprobaciones__c</fullName>
    <label>Aprobaciones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Todas</fullName>
            </value>
            <value>
                <fullName>Una por una</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>