force-app/main/default/objects/Object_BPD_Test__c/fields/Clasifica__c.field-meta.xml
<CustomField>
    <fullName>Clasifica__c</fullName>
    <label>Clasificacion Clientes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visitables</fullName>
            </value>
            <value>
                <fullName>Gestionables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>