force-app/main/default/objects/Object_BPD_Test__c/fields/Plan_de_Cuentas__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Cuentas__c</fullName>
    <label>Plan de Cuentas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test_MultiValue_Glogal</valueSetName>
    </valueSet>
</CustomField>