force-app/main/default/objects/Object_BPD_Test__c/fields/Test_Image__c.field-meta.xml
<CustomField>
    <fullName>Test_Image__c</fullName>
    <formula>IMAGE(Test_Image_URL__c, &quot;Test Name Image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Image</label>
    <type>Text</type>
</CustomField>