force-app/main/default/objects/Object_BPD_Test__c/fields/Test_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Test_Image_URL__c</fullName>
    <label>Test Image URL</label>
    <type>Url</type>
</CustomField>