force-app/main/default/objects/Object_BPD_Test__c/fields/VisitasPorProd__c.field-meta.xml
<CustomField>
    <fullName>VisitasPorProd__c</fullName>
    <label>Visitas por Prod</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>